<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F929D"
    tools:context=".Surveytemplate">


    <TextView
        android:id="@+id/questiontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/questiontxtstring"
        android:textColor="#180E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/chooiseset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:text="@string/chooisesboxtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questiontxt">


        <RadioButton
            android:id="@+id/chooise1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chooise1"
            tools:ignore="VisualLintButtonSize">

        </RadioButton>

        <RadioButton
            android:id="@+id/chooise2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chooise2"
            tools:ignore="VisualLintButtonSize">

        </RadioButton>

        <RadioButton
            android:id="@+id/chooise3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chooise3"
            tools:ignore="VisualLintButtonSize">

        </RadioButton>

        <RadioButton
            android:id="@+id/chooise4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chooise4"
            tools:ignore="VisualLintButtonSize">

        </RadioButton>


    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="203dp"
        android:layout_height="82dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="304dp"
        android:indeterminateBehavior="repeat"
        android:max="100"
        android:progress="0"
        android:progressTint="#6DB91A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>