<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/usernametext"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/usernametext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="196dp"
        android:text="@string/loginbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/registertext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="48dp"
        android:text="@string/registerbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registertext" />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="85dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/passwordtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernametext" />

    <EditText
        android:id="@+id/usernameinput"
        android:layout_width="235dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/usernametext"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/usernametext"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="231dp"
        android:layout_height="63dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/passwordtext"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/passwordtext"
        app:layout_constraintTop_toBottomOf="@+id/usernameinput" />

</androidx.constraintlayout.widget.ConstraintLayout>